# ADS8405-pico-reader

./: CMakeLists.txt  README.md
src/adc_read_usb/: CMakeLists.txt  pico-firmware.c  voltage_usb.c
src/common/: CMakeLists.txt  gpio_utils.c  gpio_utils.h
src/pico_spi_master/: CMakeLists.txt  pico_spi_master.c
src/pico_spi_master_dma/: CMakeLists.txt  pico_spi_master_dma.c
src/pico_spi_slave/: CMakeLists.txt  pico_spi_slave.c
